Compiler/tests/good/Variables/03_variables.rs
fn main(){
    let x = 12;
    let x = 24;
    let x = 42;
}