Compiler/tests/bad/Variables/04_variable.rs
fn main(){
    let x : i32 = false;
}
